<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/t_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature_label"
            android:textSize="@dimen/body_size"/>
        <TextView
            android:id="@+id/temperatureValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/t_label"
            android:layout_marginLeft="20dp"
            android:textSize="@dimen/body_size"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/temperatureValue"
            android:layout_marginLeft="5dp"
            android:text="@string/temperature_unit"
            android:textSize="@dimen/body_size"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/h_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity_label"
            android:textSize="@dimen/body_size"/>
        <TextView
            android:id="@+id/humidityValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/h_label"
            android:layout_marginLeft="20dp"
            android:textSize="@dimen/body_size"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/humidityValue"
            android:layout_marginLeft="5dp"
            android:text="@string/humidity_unit"
            android:textSize="@dimen/body_size"/>
        <TextView
            android:id="@+id/humidityTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:textSize="@dimen/body_size"/>
    </RelativeLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/led_label"
            android:onClick="retrieveLEDStatus"/>

        <Button
            android:id="@+id/ledValue"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/led_on"
            android:onClick="changeLEDStatus"/>
        <TextView
            android:id="@+id/ledTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:textSize="@dimen/body_size"/>
    </LinearLayout>
    <TextView
        android:id="@+id/log_textview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:enabled="true"
        android:scrollbars="vertical"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
</LinearLayout>